# gt_sam_sandbox

./: CMakeLists.txt  README.md  package.xml
input/: anchor_positions.txt  floor_anchor_association.txt  joint_positions.txt  joint_tag_association.txt  tag_anchor_association.txt  tag_positions.txt
results/: ground_truth_anchor_points.txt  ground_truth_points.txt  ground_truth_poses.txt  ground_truth_robot_poses.txt  ground_truth_tag_points.txt  measured_points.txt  measured_poses.txt  measured_robot_poses.txt  optimized_anchor_points.txt  optimized_anchor_position_map.txt  optimized_poses.txt  optimized_robot_points.txt  optimized_tag_points.txt
scripts/: evaluate_results.m
src/: iot_slam_concept_main.cpp  iot_widget_main.cpp  utils.h
