<?xml version="1.0"?>
<package format="2">
  <name>gt_sam_sandbox</name>
  <version>0.1.0</version>
  <description>experiments in GTSAM</description>

  <author email="adthoms@ucla.edu">Alex Thoms</author>
  <maintainer email="adthoms@ucla.edu">Alex Thoms</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>GTSAM</build_depend>
  <exec_depend>GTSAM</exec_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
</package>
